--- a/app/views/main.html
+++ b/app/views/main.html
@@ -339,7 +339,7 @@
               </div>
             </div>
             <div class="bnr-right"> 
-              <a href="single.html"><img src="images/b-1$.jpg" alt="" /></a>
+              <a href="single.html"><img src="images/b-1.jpg" alt="" /></a>
             </div>
             <div class="clearfix"> </div>
           </div>
@@ -354,7 +354,7 @@
               </div>
             </div>
             <div class="bnr-right"> 
-              <a href="single.html"><img src="images/b-2$.jpg" alt="" /></a>
+              <a href="single.html"><img src="images/b-2.jpg" alt="" /></a>
             </div>
             <div class="clearfix"> </div>
           </div>
@@ -371,14 +371,13 @@
         <div class="col-md-3 product-left" ng-repeat="image in datosComp"> 
           <div class="p-one simpleCart_shelfItem">              
               <a href="single.html">
-                <img data-ng-src="data:image/jpg;base64,{{image.body}}" alt="" />
+                 <img data-ng-src="data:image/jpg;base64,{{image.body}}" alt="" />
                 <div class="mask">
                   <span>Quick View</span>
                 </div>
               </a>
-            <h4>Aenean placerat</h4>
-            <p><a class="item_add" href="#"><i></i> <span class=" item_price">$329</span></a></p>
-          
+            <h4>{{image.headers.nombre[0]}}</h4>
+            <p><a class="item_add" href="#"><i></i> <span class=" item_price">{{image.headers.precio[0]}}</span></a></p>   
           </div>
         </div>
        <!-- <div class="col-md-3 product-left"> 
@@ -493,21 +492,21 @@
       <div class="abt-shoe-main">
         <div class="col-md-4 abt-shoe-left">
           <div class="abt-one">
-            <a href="single.html"><img src="images/abt-1$.jpg" alt="" /></a>
+            <a href="single.html"><img src="images/abt-1.jpg" alt="" /></a>
             <h4><a href="single.html">Cras dolor ligula</a></h4>
             <p>Phasellus auctor vulputate egestas. Nulla facilisi. Cras dolor ligula, pharetra vitae efficitur ac, tempus vitae nisl. Aliquam erat volutpat. </p>
           </div>
         </div>
         <div class="col-md-4 abt-shoe-left">
           <div class="abt-one">
-            <a href="single.html"><img src="images/abt-2$.jpg" alt="" /></a>
+            <a href="single.html"><img src="images/abt-2.jpg" alt="" /></a>
             <h4><a href="single.html">Cras dolor ligula</a></h4>
             <p>Phasellus auctor vulputate egestas. Nulla facilisi. Cras dolor ligula, pharetra vitae efficitur ac, tempus vitae nisl. Aliquam erat volutpat. </p>
           </div>
         </div>
         <div class="col-md-4 abt-shoe-left">
           <div class="abt-one">
-            <a href="single.html"><img src="images/abt-3$.jpg" alt="" /></a>
+            <a href="single.html"><img src="images/abt-3.jpg" alt="" /></a>
             <h4><a href="single.html">Cras dolor ligula</a></h4>
             <p>Phasellus auctor vulputate egestas. Nulla facilisi. Cras dolor ligula, pharetra vitae efficitur ac, tempus vitae nisl. Aliquam erat volutpat. </p>
           </div>
